--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
           <div class="tweetsLanding">
             <!-- tweets are put here -->
             <div class="tweet panel-body">
-              <div class="avatar"><img src="https://www.placecage.com/c/300/340" alt=""></div>
-              <button type="button" class="heart btn btn-info"><span class="glyphicon glyphicon-heart"></span></button>
+              <div class="avatar"><img src="https://www.placecage.com/c/300/362" alt=""></div>
+              <div class="tweetBtns">
+                <button type="button" class="heart btn btn-info"><span class="glyphicon glyphicon-heart"></span></button>
+                <button type="button" class="destroy btn btn-warning"><span class="glyphicon glyphicon-fire"></span></button>
+              </div>
               <h4>username</h5>
               <p>Put the bunny back in the box.</p>
             </div>
